--- a/app/globals.css
+++ b/app/globals.css
@@ -58,7 +58,7 @@
   .carousel-container {
     position: relative;
     width: 100%;
-    height: 90vh;
+    height: 100vh;
     background: black;
     overflow: hidden;
   }
@@ -112,9 +112,9 @@
 
   .content .box {
     width: 100%;
-    height: 90vh;
+    height: 100vh;
     display: flex;
- 
+    position: relative;
     user-select: none;
     padding: 40px;
   }
@@ -131,8 +131,16 @@
 
   .overlay {
     position: absolute;
+    bottom: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(180deg, transparent 90%, rgba(255, 255, 255, 0.906) 100%);
-    z-index: 3;
+    background: linear-gradient(90deg, transparent 50%, rgba(0, 0, 0, 0.906) 100%);
+  }
+
+  .tagBg-green {
+    background: rgb(21 128 61);
+  }
+  .tagBg-gold {
+    background: hsl(51, 100%, 35%);
   }
