--- a/app/globals.css
+++ b/app/globals.css
@@ -49,7 +49,8 @@
     }
   }
 
- .carousel-container .tabs > * {
+
+ .carousel-container > * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -58,7 +59,7 @@
   .carousel-container {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 115vh;
     background: black;
     overflow: hidden;
   }
@@ -76,43 +77,69 @@
   }
 
   .buttons {
+    width: 100%;
+    padding: 2rem 1rem;
+    margin: 4rem auto 0;
+    border-top: 2px solid  #e6e6e659;
     position: absolute;
-    bottom: 30px;
+    bottom: 0px;
     left: 50%;
     transform: translateX(-50%);
     display: flex;
-    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    background:  hsla(0, 0%, 10%, 0.45);
     z-index: 100;
   }
 
   .buttons label {
-    width: 20px;
-    height: 20px;
-    background:  #fff;
-    opacity: 0.5;
+    width: calc(100% / 3);
+    height: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    background:  hsla(0, 0%, 100%, 0.15);
     border-radius: 20px;
+    padding: 15px;
     cursor: pointer;
     transition: 0.5s;
   }
 
+  .buttons label:hover {
+    background-color: hsla(0, 0%, 100%, 0.25);
+    span {
+      opacity: 1;
+    }
+  }
+
   .tabs input:nth-child(1):checked ~ .buttons label:nth-child(1),
   .tabs input:nth-child(2):checked ~ .buttons label:nth-child(2),
-  .tabs input:nth-child(3):checked ~ .buttons label:nth-child(3) {
-    opacity: 1;
-    width: 50px;
+  .tabs input:nth-child(3):checked ~ .buttons label:nth-child(3), 
+  .tabs input:nth-child(4):checked ~ .buttons label:nth-child(4) {
+    background:  hsla(0, 0%, 90%, 0.35);
+    span {
+      opacity: 1;
+      text-shadow: 1px 1px 2px hsla(0, 0%, 0%, 0.7);
+    }
   }
+  
 
   .content {
     position: relative;
-    width: 300%;
+    width: 400%;
     max-height: 100%;
     display: flex;
     transition: 0.6s ease-in-out;
+    h1 {
+      line-height: 1.1;
+    }
   }
 
   .content .box {
     width: 100%;
-    height: 100vh;
+    height: 115vh;
     display: flex;
     position: relative;
     user-select: none;
@@ -123,10 +150,13 @@
     transform: translateX(0);
   }
   .tabs input:nth-child(2):checked ~ .content {
-    transform: translateX(calc(-100% / 3));
+    transform: translateX(calc(25%));
   }
   .tabs input:nth-child(3):checked ~ .content {
-    transform: translateX(calc(-200% / 3));
+    transform: translateX(calc(50%));
+  }
+  .tabs input:nth-child(4):checked ~ .content {
+    transform: translateX(calc(75%));
   }
 
   .overlay {
@@ -138,9 +168,67 @@
     background: linear-gradient(90deg, transparent 50%, rgba(0, 0, 0, 0.906) 100%);
   }
 
+  
+
   .tagBg-green {
-    background: rgb(21 128 61);
+    background: rgba(21, 128, 60, 0.906);
   }
   .tagBg-gold {
     background: hsl(51, 100%, 35%);
+  }
+
+  .tabs input:nth-child(1):checked ~ .buttons label:nth-child(1) circle,
+  .tabs input:nth-child(2):checked ~ .buttons label:nth-child(2) circle,
+  .tabs input:nth-child(3):checked ~ .buttons label:nth-child(3) circle,
+  .tabs input:nth-child(4):checked ~ .buttons label:nth-child(4) circle {
+    animation: filling 3.5s linear forwards;
+  }
+
+  .circle circle {
+    fill: none;
+    stroke: rgb(255, 255, 255);
+    stroke-width: 15px;
+    stroke-dasharray: 440;
+    stroke-dashoffset: 440;    
+  }
+  .circle .circle-2 {
+    fill: none;
+    stroke: hsla(0, 0%, 100%, 0.498);
+    stroke-width: 15px;
+    stroke-dasharray: 440;
+    stroke-dashoffset: 0;    
+  }
+
+  @keyframes filling {
+    100% {
+      stroke-dashoffset: 0;
+    }
+  }
+
+
+  @media screen and (max-width: 1023px) {
+
+    .carousel-container {
+      height: 100vh;
+      overflow: hidden;
+    }
+    .overlay {
+      background: linear-gradient(180deg, transparent 55%, rgb(0, 0, 0) 98%);
+      /* bottom: 31%; */
+    }
+
+    .buttons{
+      margin: 0;
+    }
+
+    .content .box {
+      padding: 0px 0px;
+    }
+
+  .buttons label {
+    padding: 10px;
+    .circle {
+      display: none;
+    }
+  }
   }
