--- a/app/globals.css
+++ b/app/globals.css
@@ -1,229 +1,229 @@
 @tailwind base;
-  @tailwind components;
-  @tailwind utilities;
+@tailwind components;
+@tailwind utilities;
 
-  @layer base {
-    :root {
-      --background: 0 0% 100%;
-      --foreground: 240 10% 3.9%;
-      --card: 0 0% 100%;
-      --card-foreground: 240 10% 3.9%;
-      --popover: 0 0% 100%;
-      --popover-foreground: 240 10% 3.9%;
-      --primary: 142.1 76.2% 36.3%;
-      --primary-foreground: 355.7 100% 97.3%;
-      --secondary: 240 4.8% 95.9%;
-      --secondary-foreground: 240 5.9% 10%;
-      --muted: 240 4.8% 95.9%;
-      --muted-foreground: 240 3.8% 46.1%;
-      --accent: 240 4.8% 95.9%;
-      --accent-foreground: 240 5.9% 10%;
-      --destructive: 0 84.2% 60.2%;
-      --destructive-foreground: 0 0% 98%;
-      --border: 240 5.9% 90%;
-      --input: 240 5.9% 90%;
-      --ring: 142.1 76.2% 36.3%;
-      --radius: 1rem;
-    }
-  
-    .dark {
-      --background: 20 14.3% 4.1%;
-      --foreground: 0 0% 95%;
-      --card: 24 9.8% 10%;
-      --card-foreground: 0 0% 95%;
-      --popover: 0 0% 9%;
-      --popover-foreground: 0 0% 95%;
-      --primary: 142.1 70.6% 45.3%;
-      --primary-foreground: 144.9 80.4% 10%;
-      --secondary: 240 3.7% 15.9%;
-      --secondary-foreground: 0 0% 98%;
-      --muted: 0 0% 15%;
-      --muted-foreground: 240 5% 64.9%;
-      --accent: 12 6.5% 15.1%;
-      --accent-foreground: 0 0% 98%;
-      --destructive: 0 62.8% 30.6%;
-      --destructive-foreground: 0 85.7% 97.3%;
-      --border: 240 3.7% 15.9%;
-      --input: 240 3.7% 15.9%;
-      --ring: 142.4 71.8% 29.2%;
-    }
+@import 'swiper/css';
+
+@layer base {
+  :root {
+    --background: 0 0% 100%;
+    --foreground: 240 10% 3.9%;
+    --card: 0 0% 100%;
+    --card-foreground: 240 10% 3.9%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 240 10% 3.9%;
+    --primary: 142.1 76.2% 36.3%;
+    --primary-foreground: 355.7 100% 97.3%;
+    --secondary: 240 4.8% 95.9%;
+    --secondary-foreground: 240 5.9% 10%;
+    --muted: 240 4.8% 95.9%;
+    --muted-foreground: 240 3.8% 46.1%;
+    --accent: 240 4.8% 95.9%;
+    --accent-foreground: 240 5.9% 10%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 240 5.9% 90%;
+    --input: 240 5.9% 90%;
+    --ring: 142.1 76.2% 36.3%;
+    --radius: 1rem;
   }
 
+  .dark {
+    --background: 20 14.3% 4.1%;
+    --foreground: 0 0% 95%;
+    --card: 24 9.8% 10%;
+    --card-foreground: 0 0% 95%;
+    --popover: 0 0% 9%;
+    --popover-foreground: 0 0% 95%;
+    --primary: 142.1 70.6% 45.3%;
+    --primary-foreground: 144.9 80.4% 10%;
+    --secondary: 240 3.7% 15.9%;
+    --secondary-foreground: 0 0% 98%;
+    --muted: 0 0% 15%;
+    --muted-foreground: 240 5% 64.9%;
+    --accent: 12 6.5% 15.1%;
+    --accent-foreground: 0 0% 98%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 0 85.7% 97.3%;
+    --border: 240 3.7% 15.9%;
+    --input: 240 3.7% 15.9%;
+    --ring: 142.4 71.8% 29.2%;
+  }
+}
 
- .carousel-container > * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
- }
+.carousel-container > * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+.carousel-container {
+  position: relative;
+  width: 100%;
+  height: 115vh;
+  background: black;
+  overflow: hidden;
+}
+
+.tabs {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.tabs input {
+  visibility: hidden;
+  display: none;
+}
+
+.buttons {
+  width: 100%;
+  padding: 2rem 4rem;
+  margin: 4rem auto 0;
+  border-top: 2px solid #e6e6e659;
+  position: absolute;
+  bottom: 0px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  background: hsla(0, 0%, 10%, 0.45);
+  z-index: 100;
+}
+
+.buttons label {
+  width: calc(100% / 3);
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  background: hsla(0, 0%, 100%, 0.15);
+  border-radius: 20px;
+  padding: 15px;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.buttons label:hover {
+  background-color: hsla(0, 0%, 100%, 0.25);
+  span {
+    opacity: 1;
+  }
+}
+
+.tabs input:nth-child(1):checked ~ .buttons label:nth-child(1),
+.tabs input:nth-child(2):checked ~ .buttons label:nth-child(2),
+.tabs input:nth-child(3):checked ~ .buttons label:nth-child(3),
+.tabs input:nth-child(4):checked ~ .buttons label:nth-child(4) {
+  background: hsla(0, 0%, 90%, 0.35);
+  span {
+    opacity: 1;
+    text-shadow: 1px 1px 2px hsla(0, 0%, 0%, 0.7);
+  }
+}
+
+.content {
+  position: relative;
+  width: 400%;
+  max-height: 100%;
+  display: flex;
+  transition: 0.6s ease-in-out;
+  h1 {
+    line-height: 1.1;
+  }
+}
+
+.content .box {
+  width: 100%;
+  height: 115vh;
+  display: flex;
+  position: relative;
+  user-select: none;
+  padding: 40px;
+}
+
+.tabs input:nth-child(1):checked ~ .content {
+  transform: translateX(0);
+}
+.tabs input:nth-child(2):checked ~ .content {
+  transform: translateX(calc(25%));
+}
+.tabs input:nth-child(3):checked ~ .content {
+  transform: translateX(calc(50%));
+}
+.tabs input:nth-child(4):checked ~ .content {
+  transform: translateX(calc(75%));
+}
+
+.overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    90deg,
+    transparent 50%,
+    rgba(0, 0, 0, 0.906) 100%
+  );
+}
+
+.tagBg-green {
+  background: rgba(21, 128, 60, 0.906);
+}
+.tagBg-gold {
+  background: hsl(51, 100%, 35%);
+}
+
+.tabs input:nth-child(1):checked ~ .buttons label:nth-child(1) circle,
+.tabs input:nth-child(2):checked ~ .buttons label:nth-child(2) circle,
+.tabs input:nth-child(3):checked ~ .buttons label:nth-child(3) circle,
+.tabs input:nth-child(4):checked ~ .buttons label:nth-child(4) circle {
+  animation: filling 3.5s linear forwards;
+}
+
+.circle circle {
+  fill: none;
+  stroke: rgb(255, 255, 255);
+  stroke-width: 15px;
+  stroke-dasharray: 440;
+  stroke-dashoffset: 440;
+}
+.circle .circle-2 {
+  fill: none;
+  stroke: hsla(0, 0%, 100%, 0.498);
+  stroke-width: 15px;
+  stroke-dasharray: 440;
+  stroke-dashoffset: 0;
+}
+
+@keyframes filling {
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
+
+@media screen and (max-width: 1023px) {
   .carousel-container {
-    position: relative;
-    width: 100%;
-    height: 115vh;
-    background: black;
+    height: 100vh;
     overflow: hidden;
   }
-
-  .tabs {
-    position: relative;
-    width: 100%;
-    height: 100%;
-  }
-
-
-  .tabs input {
-    visibility: hidden;
-    display: none;
+  .overlay {
+    background: linear-gradient(180deg, transparent 55%, rgb(0, 0, 0) 98%);
+    /* bottom: 31%; */
   }
 
   .buttons {
-    width: 100%;
+    margin: 0;
     padding: 2rem 1rem;
-    margin: 4rem auto 0;
-    border-top: 2px solid  #e6e6e659;
-    position: absolute;
-    bottom: 0px;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    background:  hsla(0, 0%, 10%, 0.45);
-    z-index: 100;
-  }
-
-  .buttons label {
-    width: calc(100% / 3);
-    height: fit-content;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 15px;
-    background:  hsla(0, 0%, 100%, 0.15);
-    border-radius: 20px;
-    padding: 15px;
-    cursor: pointer;
-    transition: 0.5s;
-  }
-
-  .buttons label:hover {
-    background-color: hsla(0, 0%, 100%, 0.25);
-    span {
-      opacity: 1;
-    }
-  }
-
-  .tabs input:nth-child(1):checked ~ .buttons label:nth-child(1),
-  .tabs input:nth-child(2):checked ~ .buttons label:nth-child(2),
-  .tabs input:nth-child(3):checked ~ .buttons label:nth-child(3), 
-  .tabs input:nth-child(4):checked ~ .buttons label:nth-child(4) {
-    background:  hsla(0, 0%, 90%, 0.35);
-    span {
-      opacity: 1;
-      text-shadow: 1px 1px 2px hsla(0, 0%, 0%, 0.7);
-    }
-  }
-  
-
-  .content {
-    position: relative;
-    width: 400%;
-    max-height: 100%;
-    display: flex;
-    transition: 0.6s ease-in-out;
-    h1 {
-      line-height: 1.1;
-    }
   }
 
   .content .box {
-    width: 100%;
-    height: 115vh;
-    display: flex;
-    position: relative;
-    user-select: none;
-    padding: 40px;
+    padding: 0px 0px;
   }
-
-  .tabs input:nth-child(1):checked ~ .content {
-    transform: translateX(0);
-  }
-  .tabs input:nth-child(2):checked ~ .content {
-    transform: translateX(calc(25%));
-  }
-  .tabs input:nth-child(3):checked ~ .content {
-    transform: translateX(calc(50%));
-  }
-  .tabs input:nth-child(4):checked ~ .content {
-    transform: translateX(calc(75%));
-  }
-
-  .overlay {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(90deg, transparent 50%, rgba(0, 0, 0, 0.906) 100%);
-  }
-
-  
-
-  .tagBg-green {
-    background: rgba(21, 128, 60, 0.906);
-  }
-  .tagBg-gold {
-    background: hsl(51, 100%, 35%);
-  }
-
-  .tabs input:nth-child(1):checked ~ .buttons label:nth-child(1) circle,
-  .tabs input:nth-child(2):checked ~ .buttons label:nth-child(2) circle,
-  .tabs input:nth-child(3):checked ~ .buttons label:nth-child(3) circle,
-  .tabs input:nth-child(4):checked ~ .buttons label:nth-child(4) circle {
-    animation: filling 3.5s linear forwards;
-  }
-
-  .circle circle {
-    fill: none;
-    stroke: rgb(255, 255, 255);
-    stroke-width: 15px;
-    stroke-dasharray: 440;
-    stroke-dashoffset: 440;    
-  }
-  .circle .circle-2 {
-    fill: none;
-    stroke: hsla(0, 0%, 100%, 0.498);
-    stroke-width: 15px;
-    stroke-dasharray: 440;
-    stroke-dashoffset: 0;    
-  }
-
-  @keyframes filling {
-    100% {
-      stroke-dashoffset: 0;
-    }
-  }
-
-
-  @media screen and (max-width: 1023px) {
-
-    .carousel-container {
-      height: 100vh;
-      overflow: hidden;
-    }
-    .overlay {
-      background: linear-gradient(180deg, transparent 55%, rgb(0, 0, 0) 98%);
-      /* bottom: 31%; */
-    }
-
-    .buttons{
-      margin: 0;
-    }
-
-    .content .box {
-      padding: 0px 0px;
-    }
 
   .buttons label {
     padding: 10px;
@@ -231,4 +231,4 @@
       display: none;
     }
   }
-  }
+}
