--- a/app/globals.css
+++ b/app/globals.css
@@ -348,3 +348,11 @@
 .embla__dot--selected:after {
   box-shadow: inset 0 0 0 0.2rem hsla(0, 0%, 100%, 0.498);
 }
+
+.trending-number {
+  -webkit-text-stroke: 1px hsla(0, 0%, 100%);
+  text-stroke: 1px hsla(0, 0%, 100%);
+  -webkit-text-fill-color: transparent;
+  text-fill-color: transparent;
+
+}
