--- a/app/globals.css
+++ b/app/globals.css
@@ -237,12 +237,11 @@
 /* ***************************** Embla Carousel ***************************** */
 
 .embla {
-  width: 100%;
-  padding: 0 4rem;
+  max-width: 100%;
   margin: auto;
   --slide-height: 19rem;
-  --slide-spacing: 1rem;
-  --slide-size: 20%;
+  --slide-spacing: 0.2rem;
+  --slide-size: 100%;
 }
 .embla__viewport {
   overflow: hidden;
@@ -259,7 +258,7 @@
   padding-left: var(--slide-spacing);
 }
 .embla__slide__number {
-  box-shadow: inset 0 0 0 0.2rem hsla(0, 0%, 10%, 0.45);
+  box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);
   border-radius: 1.8rem;
   font-size: 4rem;
   font-weight: 600;
@@ -282,26 +281,7 @@
   align-items: center;
 }
 .embla__button {
-  -webkit-tap-highlight-color: hlsa(var(--foreground), 0.5);
-  -webkit-appearance: none;
-  appearance: none;
-  background-color: transparent;
-  touch-action: manipulation;
-  display: inline-flex;
-  text-decoration: none;
-  cursor: pointer;
-  border: 0;
-  padding: 0;
-  margin: 0;
-  box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);
-  width: 3.6rem;
-  height: 3.6rem;
-  z-index: 1;
-  border-radius: 50%;
-  color: hsl(var(--card-foreground));
-  display: flex;
-  align-items: center;
-  justify-content: center;
+ 
 }
 .embla__button:disabled {
   color: var(--detail-high-contrast);
@@ -318,7 +298,7 @@
   margin-right: calc((2.6rem - 1.4rem) / 2 * -1);
 }
 .embla__dot {
-  -webkit-tap-highlight-color: hsla(var(--foreground), 0.5);
+  -webkit-tap-highlight-color: rgba(var(--text-high-contrast-rgb-value), 0.5);
   -webkit-appearance: none;
   appearance: none;
   background-color: transparent;
@@ -337,7 +317,7 @@
   border-radius: 50%;
 }
 .embla__dot:after {
-  box-shadow: inset 0 0 0 0.2rem hsla(0, 0%, 0%, 0.7);
+  box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);
   width: 1.4rem;
   height: 1.4rem;
   border-radius: 50%;
@@ -346,13 +326,26 @@
   content: '';
 }
 .embla__dot--selected:after {
-  box-shadow: inset 0 0 0 0.2rem hsla(0, 0%, 100%, 0.498);
+  box-shadow: inset 0 0 0 0.2rem var(--text-body);
+}
+.embla__slide__number {
+  backface-visibility: hidden;
 }
 
+
+/* ************ Trending ************ */
+
 .trending-number {
-  -webkit-text-stroke: 1px hsla(0, 0%, 100%);
-  text-stroke: 1px hsla(0, 0%, 100%);
+  -webkit-text-stroke: 1.5px hsla(0, 0%, 0%, 0.45);
+  text-stroke: 1.5px hsla(0, 0%, 0%, 0.45);
   -webkit-text-fill-color: transparent;
   text-fill-color: transparent;
 
 }
+
+.categories-section {
+  img {
+    transition: transform 0.4s ease-in-out;
+  }
+}
+
