--- a/app/(client)/globals.css
+++ b/app/(client)/globals.css
@@ -79,9 +79,8 @@
 
 .buttons {
   width: 100%;
-  padding: 2rem 4rem;
+  height: 140px;
   margin: 4rem auto 0;
-  border-top: 2px solid #e6e6e659;
   position: absolute;
   bottom: 0px;
   left: 50%;
@@ -89,47 +88,50 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 20px;
-  background: hsla(0, 0%, 10%, 0.45);
+  background: hsl(0, 0%, 8%);
   z-index: 100;
 }
 
 .buttons label {
-  width: calc(100% / 3);
-  height: fit-content;
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 15px;
-  background: hsla(0, 0%, 100%, 0.15);
-  border-radius: 20px;
+  gap: 8px;
   padding: 15px;
   cursor: pointer;
   transition: 0.5s;
+  position: relative;
+  .button-text {
+    opacity: .5;
+    transition: all 0.3s ease-in-out ;
+  }
+
 }
 
 .buttons label:hover {
-  background-color: hsla(0, 0%, 100%, 0.25);
   span {
     opacity: 1;
   }
 }
+
 
 .tabs input:nth-child(1):checked ~ .buttons label:nth-child(1),
 .tabs input:nth-child(2):checked ~ .buttons label:nth-child(2),
 .tabs input:nth-child(3):checked ~ .buttons label:nth-child(3),
 .tabs input:nth-child(4):checked ~ .buttons label:nth-child(4) {
-  background: hsla(0, 0%, 90%, 0.35);
-  span {
+  .button-text {
     opacity: 1;
     text-shadow: 1px 1px 2px hsla(0, 0%, 0%, 0.7);
   }
+
 }
 
 .content {
   position: relative;
-  width: 400%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
   display: flex;
   transition: 0.6s ease-in-out;
   h1 {
@@ -138,25 +140,37 @@
 }
 
 .content .box {
-  width: 100%;
   height: 115vh;
   display: flex;
-  position: relative;
   user-select: none;
   padding: 40px;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  transition: all 0.6s ease-in-out ;
 }
 
-.tabs input:nth-child(1):checked ~ .content {
-  transform: translateX(0);
+
+
+
+.tabs input:nth-child(1):checked ~ .content .box:nth-child(1) {
+  opacity: 1;
+
 }
-.tabs input:nth-child(2):checked ~ .content {
-  transform: translateX(calc(25%));
+.tabs input:nth-child(2):checked ~ .content .box:nth-child(2) {
+  opacity: 1;
+
 }
-.tabs input:nth-child(3):checked ~ .content {
-  transform: translateX(calc(50%));
+.tabs input:nth-child(3):checked ~ .content .box:nth-child(3) {
+  opacity: 1;
+
 }
-.tabs input:nth-child(4):checked ~ .content {
-  transform: translateX(calc(75%));
+.tabs input:nth-child(4):checked ~ .content .box:nth-child(4) {
+  opacity: 1;
+
 }
 
 .overlay {
