--- a/app/(client)/globals.css
+++ b/app/(client)/globals.css
@@ -150,7 +150,7 @@
 }
 
 
-@keyframes showContent {
+/* @keyframes showContent {
   from {
     clip-path: circle(0% at 0% 50%);
   }
@@ -158,11 +158,19 @@
     clip-path: circle(130% at 0% 50%);
   }
 }
+@keyframes showContent {
+  from {
+    clip-path: circle(0% at 0% 50%);
+  }
+  to {
+    clip-path: circle(130% at 0% 50%);
+  }
+} */
 
 
 
 .tabs input:nth-child(1):checked ~ .content .box:nth-child(1) {
-  animation: showContent 0.6s ease-in-out 1 forwards;
+  /* animation: showContent 0.6s ease-in-out 1 forwards; */
 }
 /* .tabs input:nth-child(1):checked ~ .content .box:nth-child(4)  {
   z-index: 9;
@@ -171,7 +179,7 @@
 
 
 .tabs input:nth-child(2):checked ~ .content .box:nth-child(2) {
-  animation: showContent 0.6s ease-in-out 1 forwards;
+  /* animation: showContent 0.6s ease-in-out 1 forwards; */
 }
 /* .tabs input:nth-child(2):checked ~ .content .box:nth-child(1), .tabs input:nth-child(2):checked ~ .content .box:nth-child(3)  {
   display: flex;
@@ -179,11 +187,11 @@
 
 .tabs input:nth-child(3):checked ~ .content .box:nth-child(3) {
 
-  animation: showContent 0.6s ease-in-out 1 forwards;
+  /* animation: showContent 0.6s ease-in-out 1 forwards; */
 
 }
 .tabs input:nth-child(4):checked ~ .content .box:nth-child(4) {
-  animation: showContent 0.6s ease-in-out 1 forwards;
+  /* animation: showContent 0.6s ease-in-out 1 forwards; */
 
 }
 
